parser.output
Terminals unused in grammar

   TOKEN_ERRO


State 229 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce
State 300 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: programa_aux

    2 programa_aux: declaracao_funcao_usertype_e_var_global programa_aux
    3             | declaracao_variavel_global programa_aux
    4             | declaracao_novo_tipo programa_aux
    5             | declaracao_funcao programa_aux
    6             | %empty

    7 literal: TK_LIT_INT
    8        | TK_LIT_FLOAT
    9        | TK_LIT_FALSE
   10        | TK_LIT_TRUE
   11        | TK_LIT_CHAR
   12        | TK_LIT_STRING

   13 opcional_acesso_vetor: %empty
   14                      | '[' expressao ']'

   15 opcional_declaracao_valor: %empty
   16                          | TK_OC_LE identificador
   17                          | TK_OC_LE literal

   18 opcional_acesso_propriedade: %empty
   19                            | '$' TK_IDENTIFICADOR

   20 acesso_propriedade: '$' TK_IDENTIFICADOR

   21 acesso_variavel: identificador opcional_acesso_propriedade opcional_acesso_vetor

   22 tipo_variavel_primitiva: TK_PR_INT
   23                        | TK_PR_FLOAT
   24                        | TK_PR_CHAR
   25                        | TK_PR_BOOL
   26                        | TK_PR_STRING

   27 tipo_variavel_usuario: identificador

   28 tipo_variavel: tipo_variavel_usuario
   29              | tipo_variavel_primitiva

   30 expressao: '+' expressao
   31          | '-' expressao
   32          | '!' expressao
   33          | '&' expressao
   34          | '*' expressao
   35          | '#' expressao
   36          | '?' expressao
   37          | expressao '+' expressao
   38          | expressao '-' expressao
   39          | expressao '*' expressao
   40          | expressao '/' expressao
   41          | expressao '%' expressao
   42          | expressao '|' expressao
   43          | expressao '&' expressao
   44          | expressao '^' expressao
   45          | expressao '<' expressao
   46          | expressao '>' expressao
   47          | expressao TK_OC_LE expressao
   48          | expressao TK_OC_GE expressao
   49          | expressao TK_OC_EQ expressao
   50          | expressao TK_OC_NE expressao
   51          | expressao TK_OC_AND expressao
   52          | expressao TK_OC_OR expressao
   53          | literal
   54          | acesso_variavel
   55          | chamada_funcao
   56          | '(' expressao ')'
   57          | expressao '?' expressao ':' expressao

   58 declaracao_novo_tipo: TK_PR_CLASS identificador '[' declaracao_novo_tipo_propriedade declaracao_novo_tipo_propriedades ']' ';'

   59 declaracao_novo_tipo_propriedades: ':' declaracao_novo_tipo_propriedade declaracao_novo_tipo_propriedades
   60                                  | %empty

   61 declaracao_novo_tipo_propriedade: opcional_encapsulamento tipo_variavel_primitiva identificador

   62 opcional_encapsulamento: %empty
   63                        | TK_PR_PRIVATE
   64                        | TK_PR_PUBLIC
   65                        | TK_PR_PROTECTED

   66 declaracao_tamanho: '[' TK_LIT_INT ']'

   67 identificador: TK_IDENTIFICADOR

   68 declaracao_funcao_usertype_e_var_global: identificador identificador ';'

   69 declaracao_variavel_global: identificador TK_PR_STATIC tipo_variavel ';'
   70                           | identificador declaracao_tamanho tipo_variavel ';'
   71                           | identificador declaracao_tamanho TK_PR_STATIC tipo_variavel ';'
   72                           | identificador tipo_variavel_primitiva ';'

   73 function_body: '{' comando_simples '}'

   74 declaracao_funcao_usertype_e_var_global: identificador identificador '(' primeiro_param_funcao ')' function_body

   75 declaracao_funcao: TK_PR_STATIC tipo_variavel identificador '(' primeiro_param_funcao ')' function_body
   76                  | tipo_variavel_primitiva identificador '(' primeiro_param_funcao ')' function_body

   77 primeiro_param_funcao: %empty
   78                      | declaracao_parametro_unico_funcao param_funcao

   79 param_funcao: %empty
   80             | ',' declaracao_parametro_unico_funcao param_funcao

   81 declaracao_parametro_unico_funcao: TK_PR_CONST TK_PR_STATIC tipo_variavel identificador
   82                                  | TK_PR_CONST tipo_variavel identificador
   83                                  | TK_PR_STATIC tipo_variavel identificador
   84                                  | tipo_variavel identificador

   85 um_comando: declaracao_variavel_local_ou_atribuicao_ou_shift
   86           | input
   87           | output
   88           | chamada_funcao
   89           | comando_return
   90           | comando_break
   91           | comando_continue
   92           | comando_do_while
   93           | comando_if
   94           | comando_switch
   95           | comando_foreach
   96           | comando_for
   97           | comando_while

   98 comando_simples: %empty
   99                | um_comando ';' comando_simples
  100                | bloco_comandos ';' comando_simples
  101                | comando_case comando_simples

  102 bloco_comandos: '{' comando_simples '}'

  103 atribuicao: acesso_variavel '=' expressao
  104           | TK_IDENTIFICADOR TK_IDENTIFICADOR

  105 declaracao_variavel_local_ou_atribuicao_ou_shift: identificador identificador
  106                                                 | identificador declaracao_variavel_local_ou_atribuicao_ou_shift_id
  107                                                 | TK_PR_CONST declaracao_variavel_local_const
  108                                                 | TK_PR_STATIC declaracao_variavel_local_static
  109                                                 | tipo_variavel_primitiva identificador opcional_declaracao_valor

  110 declaracao_variavel_local_const: declaracao_variavel_local

  111 declaracao_variavel_local_static: TK_PR_CONST declaracao_variavel_local
  112                                 | declaracao_variavel_local

  113 declaracao_variavel_local_ou_atribuicao_ou_shift_id: TK_OC_SL expressao
  114                                                    | TK_OC_SR expressao
  115                                                    | acesso_propriedade declaracao_variavel_local_ou_atribuicao_id_parametro
  116                                                    | '[' expressao ']' '=' expressao
  117                                                    | '=' expressao

  118 declaracao_variavel_local_ou_atribuicao_id_parametro: '[' expressao ']' '=' expressao
  119                                                     | '=' expressao
  120                                                     | TK_OC_SL expressao
  121                                                     | TK_OC_SR expressao

  122 declaracao_variavel_local: identificador
  123                          | TK_PR_INT identificador opcional_declaracao_valor
  124                          | TK_PR_FLOAT identificador opcional_declaracao_valor
  125                          | TK_PR_BOOL identificador opcional_declaracao_valor
  126                          | TK_PR_CHAR identificador opcional_declaracao_valor
  127                          | TK_PR_STRING identificador opcional_declaracao_valor
  128                          | identificador identificador

  129 input: TK_PR_INPUT expressao

  130 output: TK_PR_OUTPUT expressao lista_expressoes

  131 lista_expressoes: %empty
  132                 | ',' expressao lista_expressoes

  133 chamada_funcao: identificador '(' argumento ')' optional_pipe_command

  134 argumento: %empty
  135          | expressao argumento_aux
  136          | '.' argumento_aux

  137 argumento_aux: %empty
  138              | ',' argumento argumento_aux

  139 comando_return: TK_PR_RETURN expressao

  140 comando_break: TK_PR_BREAK

  141 comando_continue: TK_PR_CONTINUE

  142 comando_case: TK_PR_CASE TK_LIT_INT ':'

  143 comando_if: TK_PR_IF '(' expressao ')' TK_PR_THEN bloco_comandos comando_else_opcional

  144 comando_else_opcional: %empty
  145                      | TK_PR_ELSE bloco_comandos

  146 comando_switch: TK_PR_SWITCH '(' expressao ')' bloco_comandos

  147 comandos_dentro_for: atribuicao
  148                    | bloco_comandos

  149 comandos_dentro_for_aux: %empty
  150                        | ',' comandos_dentro_for comandos_dentro_for_aux

  151 comando_foreach: TK_PR_FOREACH '(' identificador ':' expressao lista_expressoes ')' bloco_comandos

  152 comando_for: TK_PR_FOR '(' comandos_dentro_for comandos_dentro_for_aux ':' expressao ':' comandos_dentro_for comandos_dentro_for_aux ')' bloco_comandos

  153 comando_while: TK_PR_WHILE '(' expressao ')' TK_PR_DO bloco_comandos

  154 comando_do_while: TK_PR_DO bloco_comandos TK_PR_WHILE '(' expressao ')'

  155 pipe: TK_OC_FORWARD_PIPE
  156     | TK_OC_BASH_PIPE

  157 optional_pipe_command: %empty
  158                      | comando_pipe

  159 comando_pipe: pipe chamada_funcao


Terminals, with rules where they appear

$end (0) 0
'!' (33) 32
'#' (35) 35
'$' (36) 19 20
'%' (37) 41
'&' (38) 33 43
'(' (40) 56 74 75 76 133 143 146 151 152 153 154
')' (41) 56 74 75 76 133 143 146 151 152 153 154
'*' (42) 34 39
'+' (43) 30 37
',' (44) 80 132 138 150
'-' (45) 31 38
'.' (46) 136
'/' (47) 40
':' (58) 57 59 142 151 152
';' (59) 58 68 69 70 71 72 99 100
'<' (60) 45
'=' (61) 103 116 117 118 119
'>' (62) 46
'?' (63) 36 57
'[' (91) 14 58 66 116 118
']' (93) 14 58 66 116 118
'^' (94) 44
'{' (123) 73 102
'|' (124) 42
'}' (125) 73 102
error (256)
TK_PR_INT (258) 22 123
TK_PR_FLOAT (259) 23 124
TK_PR_BOOL (260) 25 125
TK_PR_CHAR (261) 24 126
TK_PR_STRING (262) 26 127
TK_PR_IF (263) 143
TK_PR_THEN (264) 143
TK_PR_ELSE (265) 145
TK_PR_WHILE (266) 153 154
TK_PR_DO (267) 153 154
TK_PR_INPUT (268) 129
TK_PR_OUTPUT (269) 130
TK_PR_RETURN (270) 139
TK_PR_CONST (271) 81 82 107 111
TK_PR_STATIC (272) 69 71 75 81 83 108
TK_PR_FOREACH (273) 151
TK_PR_FOR (274) 152
TK_PR_SWITCH (275) 146
TK_PR_CASE (276) 142
TK_PR_BREAK (277) 140
TK_PR_CONTINUE (278) 141
TK_PR_CLASS (279) 58
TK_PR_PRIVATE (280) 63
TK_PR_PUBLIC (281) 64
TK_PR_PROTECTED (282) 65
TK_OC_LE (283) 16 17 47
TK_OC_GE (284) 48
TK_OC_EQ (285) 49
TK_OC_NE (286) 50
TK_OC_AND (287) 51
TK_OC_OR (288) 52
TK_OC_SL (289) 113 120
TK_OC_SR (290) 114 121
TK_OC_FORWARD_PIPE (291) 155
TK_OC_BASH_PIPE (292) 156
TK_LIT_INT (293) 7 66 142
TK_LIT_FLOAT (294) 8
TK_LIT_FALSE (295) 9
TK_LIT_TRUE (296) 10
TK_LIT_CHAR (297) 11
TK_LIT_STRING (298) 12
TK_IDENTIFICADOR (299) 19 20 67 104
TOKEN_ERRO (300)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
programa (72)
    on left: 1, on right: 0
programa_aux (73)
    on left: 2 3 4 5 6, on right: 1 2 3 4 5
literal (74)
    on left: 7 8 9 10 11 12, on right: 17 53
opcional_acesso_vetor (75)
    on left: 13 14, on right: 21
opcional_declaracao_valor (76)
    on left: 15 16 17, on right: 109 123 124 125 126 127
opcional_acesso_propriedade (77)
    on left: 18 19, on right: 21
acesso_propriedade (78)
    on left: 20, on right: 115
acesso_variavel (79)
    on left: 21, on right: 54 103
tipo_variavel_primitiva (80)
    on left: 22 23 24 25 26, on right: 29 61 72 76 109
tipo_variavel_usuario (81)
    on left: 27, on right: 28
tipo_variavel (82)
    on left: 28 29, on right: 69 70 71 75 81 82 83 84
expressao (83)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57, on right: 14 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 56 57 103 113 114
    116 117 118 119 120 121 129 130 132 135 139 143 146 151 152 153
    154
declaracao_novo_tipo (84)
    on left: 58, on right: 4
declaracao_novo_tipo_propriedades (85)
    on left: 59 60, on right: 58 59
declaracao_novo_tipo_propriedade (86)
    on left: 61, on right: 58 59
opcional_encapsulamento (87)
    on left: 62 63 64 65, on right: 61
declaracao_tamanho (88)
    on left: 66, on right: 70 71
identificador (89)
    on left: 67, on right: 16 21 27 58 61 68 69 70 71 72 74 75 76 81
    82 83 84 105 106 109 122 123 124 125 126 127 128 133 151
declaracao_funcao_usertype_e_var_global (90)
    on left: 68 74, on right: 2
declaracao_variavel_global (91)
    on left: 69 70 71 72, on right: 3
function_body (92)
    on left: 73, on right: 74 75 76
declaracao_funcao (93)
    on left: 75 76, on right: 5
primeiro_param_funcao (94)
    on left: 77 78, on right: 74 75 76
param_funcao (95)
    on left: 79 80, on right: 78 80
declaracao_parametro_unico_funcao (96)
    on left: 81 82 83 84, on right: 78 80
um_comando (97)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97, on right: 99
comando_simples (98)
    on left: 98 99 100 101, on right: 73 99 100 101 102
bloco_comandos (99)
    on left: 102, on right: 100 143 145 146 148 151 152 153 154
atribuicao (100)
    on left: 103 104, on right: 147
declaracao_variavel_local_ou_atribuicao_ou_shift (101)
    on left: 105 106 107 108 109, on right: 85
declaracao_variavel_local_const (102)
    on left: 110, on right: 107
declaracao_variavel_local_static (103)
    on left: 111 112, on right: 108
declaracao_variavel_local_ou_atribuicao_ou_shift_id (104)
    on left: 113 114 115 116 117, on right: 106
declaracao_variavel_local_ou_atribuicao_id_parametro (105)
    on left: 118 119 120 121, on right: 115
declaracao_variavel_local (106)
    on left: 122 123 124 125 126 127 128, on right: 110 111 112
input (107)
    on left: 129, on right: 86
output (108)
    on left: 130, on right: 87
lista_expressoes (109)
    on left: 131 132, on right: 130 132 151
chamada_funcao (110)
    on left: 133, on right: 55 88 159
argumento (111)
    on left: 134 135 136, on right: 133 138
argumento_aux (112)
    on left: 137 138, on right: 135 136 138
comando_return (113)
    on left: 139, on right: 89
comando_break (114)
    on left: 140, on right: 90
comando_continue (115)
    on left: 141, on right: 91
comando_case (116)
    on left: 142, on right: 101
comando_if (117)
    on left: 143, on right: 93
comando_else_opcional (118)
    on left: 144 145, on right: 143
comando_switch (119)
    on left: 146, on right: 94
comandos_dentro_for (120)
    on left: 147 148, on right: 150 152
comandos_dentro_for_aux (121)
    on left: 149 150, on right: 150 152
comando_foreach (122)
    on left: 151, on right: 95
comando_for (123)
    on left: 152, on right: 96
comando_while (124)
    on left: 153, on right: 97
comando_do_while (125)
    on left: 154, on right: 92
pipe (126)
    on left: 155 156, on right: 159
optional_pipe_command (127)
    on left: 157 158, on right: 133
comando_pipe (128)
    on left: 159, on right: 158


State 0

    0 $accept: . programa $end

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 6 (programa_aux)

    programa                                 go to state 9
    programa_aux                             go to state 10
    tipo_variavel_primitiva                  go to state 11
    declaracao_novo_tipo                     go to state 12
    identificador                            go to state 13
    declaracao_funcao_usertype_e_var_global  go to state 14
    declaracao_variavel_global               go to state 15
    declaracao_funcao                        go to state 16


State 1

   22 tipo_variavel_primitiva: TK_PR_INT .

    $default  reduce using rule 22 (tipo_variavel_primitiva)


State 2

   23 tipo_variavel_primitiva: TK_PR_FLOAT .

    $default  reduce using rule 23 (tipo_variavel_primitiva)


State 3

   25 tipo_variavel_primitiva: TK_PR_BOOL .

    $default  reduce using rule 25 (tipo_variavel_primitiva)


State 4

   24 tipo_variavel_primitiva: TK_PR_CHAR .

    $default  reduce using rule 24 (tipo_variavel_primitiva)


State 5

   26 tipo_variavel_primitiva: TK_PR_STRING .

    $default  reduce using rule 26 (tipo_variavel_primitiva)


State 6

   75 declaracao_funcao: TK_PR_STATIC . tipo_variavel identificador '(' primeiro_param_funcao ')' function_body

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 8

    tipo_variavel_primitiva  go to state 17
    tipo_variavel_usuario    go to state 18
    tipo_variavel            go to state 19
    identificador            go to state 20


State 7

   58 declaracao_novo_tipo: TK_PR_CLASS . identificador '[' declaracao_novo_tipo_propriedade declaracao_novo_tipo_propriedades ']' ';'

    TK_IDENTIFICADOR  shift, and go to state 8

    identificador  go to state 21


State 8

   67 identificador: TK_IDENTIFICADOR .

    $default  reduce using rule 67 (identificador)


State 9

    0 $accept: programa . $end

    $end  shift, and go to state 22


State 10

    1 programa: programa_aux .

    $default  reduce using rule 1 (programa)


State 11

   76 declaracao_funcao: tipo_variavel_primitiva . identificador '(' primeiro_param_funcao ')' function_body

    TK_IDENTIFICADOR  shift, and go to state 8

    identificador  go to state 23


State 12

    4 programa_aux: declaracao_novo_tipo . programa_aux

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 6 (programa_aux)

    programa_aux                             go to state 24
    tipo_variavel_primitiva                  go to state 11
    declaracao_novo_tipo                     go to state 12
    identificador                            go to state 13
    declaracao_funcao_usertype_e_var_global  go to state 14
    declaracao_variavel_global               go to state 15
    declaracao_funcao                        go to state 16


State 13

   68 declaracao_funcao_usertype_e_var_global: identificador . identificador ';'
   69 declaracao_variavel_global: identificador . TK_PR_STATIC tipo_variavel ';'
   70                           | identificador . declaracao_tamanho tipo_variavel ';'
   71                           | identificador . declaracao_tamanho TK_PR_STATIC tipo_variavel ';'
   72                           | identificador . tipo_variavel_primitiva ';'
   74 declaracao_funcao_usertype_e_var_global: identificador . identificador '(' primeiro_param_funcao ')' function_body

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 25
    TK_IDENTIFICADOR  shift, and go to state 8
    '['               shift, and go to state 26

    tipo_variavel_primitiva  go to state 27
    declaracao_tamanho       go to state 28
    identificador            go to state 29


State 14

    2 programa_aux: declaracao_funcao_usertype_e_var_global . programa_aux

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 6 (programa_aux)

    programa_aux                             go to state 30
    tipo_variavel_primitiva                  go to state 11
    declaracao_novo_tipo                     go to state 12
    identificador                            go to state 13
    declaracao_funcao_usertype_e_var_global  go to state 14
    declaracao_variavel_global               go to state 15
    declaracao_funcao                        go to state 16


State 15

    3 programa_aux: declaracao_variavel_global . programa_aux

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 6 (programa_aux)

    programa_aux                             go to state 31
    tipo_variavel_primitiva                  go to state 11
    declaracao_novo_tipo                     go to state 12
    identificador                            go to state 13
    declaracao_funcao_usertype_e_var_global  go to state 14
    declaracao_variavel_global               go to state 15
    declaracao_funcao                        go to state 16


State 16

    5 programa_aux: declaracao_funcao . programa_aux

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 6 (programa_aux)

    programa_aux                             go to state 32
    tipo_variavel_primitiva                  go to state 11
    declaracao_novo_tipo                     go to state 12
    identificador                            go to state 13
    declaracao_funcao_usertype_e_var_global  go to state 14
    declaracao_variavel_global               go to state 15
    declaracao_funcao                        go to state 16


State 17

   29 tipo_variavel: tipo_variavel_primitiva .

    $default  reduce using rule 29 (tipo_variavel)


State 18

   28 tipo_variavel: tipo_variavel_usuario .

    $default  reduce using rule 28 (tipo_variavel)


State 19

   75 declaracao_funcao: TK_PR_STATIC tipo_variavel . identificador '(' primeiro_param_funcao ')' function_body

    TK_IDENTIFICADOR  shift, and go to state 8

    identificador  go to state 33


State 20

   27 tipo_variavel_usuario: identificador .

    $default  reduce using rule 27 (tipo_variavel_usuario)


State 21

   58 declaracao_novo_tipo: TK_PR_CLASS identificador . '[' declaracao_novo_tipo_propriedade declaracao_novo_tipo_propriedades ']' ';'

    '['  shift, and go to state 34


State 22

    0 $accept: programa $end .

    $default  accept


State 23

   76 declaracao_funcao: tipo_variavel_primitiva identificador . '(' primeiro_param_funcao ')' function_body

    '('  shift, and go to state 35


State 24

    4 programa_aux: declaracao_novo_tipo programa_aux .

    $default  reduce using rule 4 (programa_aux)


State 25

   69 declaracao_variavel_global: identificador TK_PR_STATIC . tipo_variavel ';'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 8

    tipo_variavel_primitiva  go to state 17
    tipo_variavel_usuario    go to state 18
    tipo_variavel            go to state 36
    identificador            go to state 20


State 26

   66 declaracao_tamanho: '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 37


State 27

   72 declaracao_variavel_global: identificador tipo_variavel_primitiva . ';'

    ';'  shift, and go to state 38


State 28

   70 declaracao_variavel_global: identificador declaracao_tamanho . tipo_variavel ';'
   71                           | identificador declaracao_tamanho . TK_PR_STATIC tipo_variavel ';'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 39
    TK_IDENTIFICADOR  shift, and go to state 8

    tipo_variavel_primitiva  go to state 17
    tipo_variavel_usuario    go to state 18
    tipo_variavel            go to state 40
    identificador            go to state 20


State 29

   68 declaracao_funcao_usertype_e_var_global: identificador identificador . ';'
   74                                        | identificador identificador . '(' primeiro_param_funcao ')' function_body

    '('  shift, and go to state 41
    ';'  shift, and go to state 42


State 30

    2 programa_aux: declaracao_funcao_usertype_e_var_global programa_aux .

    $default  reduce using rule 2 (programa_aux)


State 31

    3 programa_aux: declaracao_variavel_global programa_aux .

    $default  reduce using rule 3 (programa_aux)


State 32

    5 programa_aux: declaracao_funcao programa_aux .

    $default  reduce using rule 5 (programa_aux)


State 33

   75 declaracao_funcao: TK_PR_STATIC tipo_variavel identificador . '(' primeiro_param_funcao ')' function_body

    '('  shift, and go to state 43


State 34

   58 declaracao_novo_tipo: TK_PR_CLASS identificador '[' . declaracao_novo_tipo_propriedade declaracao_novo_tipo_propriedades ']' ';'

    TK_PR_PRIVATE    shift, and go to state 44
    TK_PR_PUBLIC     shift, and go to state 45
    TK_PR_PROTECTED  shift, and go to state 46

    $default  reduce using rule 62 (opcional_encapsulamento)

    declaracao_novo_tipo_propriedade  go to state 47
    opcional_encapsulamento           go to state 48


State 35

   76 declaracao_funcao: tipo_variavel_primitiva identificador '(' . primeiro_param_funcao ')' function_body

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 49
    TK_PR_STATIC      shift, and go to state 50
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 77 (primeiro_param_funcao)

    tipo_variavel_primitiva            go to state 17
    tipo_variavel_usuario              go to state 18
    tipo_variavel                      go to state 51
    identificador                      go to state 20
    primeiro_param_funcao              go to state 52
    declaracao_parametro_unico_funcao  go to state 53


State 36

   69 declaracao_variavel_global: identificador TK_PR_STATIC tipo_variavel . ';'

    ';'  shift, and go to state 54


State 37

   66 declaracao_tamanho: '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 55


State 38

   72 declaracao_variavel_global: identificador tipo_variavel_primitiva ';' .

    $default  reduce using rule 72 (declaracao_variavel_global)


State 39

   71 declaracao_variavel_global: identificador declaracao_tamanho TK_PR_STATIC . tipo_variavel ';'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 8

    tipo_variavel_primitiva  go to state 17
    tipo_variavel_usuario    go to state 18
    tipo_variavel            go to state 56
    identificador            go to state 20


State 40

   70 declaracao_variavel_global: identificador declaracao_tamanho tipo_variavel . ';'

    ';'  shift, and go to state 57


State 41

   74 declaracao_funcao_usertype_e_var_global: identificador identificador '(' . primeiro_param_funcao ')' function_body

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 49
    TK_PR_STATIC      shift, and go to state 50
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 77 (primeiro_param_funcao)

    tipo_variavel_primitiva            go to state 17
    tipo_variavel_usuario              go to state 18
    tipo_variavel                      go to state 51
    identificador                      go to state 20
    primeiro_param_funcao              go to state 58
    declaracao_parametro_unico_funcao  go to state 53


State 42

   68 declaracao_funcao_usertype_e_var_global: identificador identificador ';' .

    $default  reduce using rule 68 (declaracao_funcao_usertype_e_var_global)


State 43

   75 declaracao_funcao: TK_PR_STATIC tipo_variavel identificador '(' . primeiro_param_funcao ')' function_body

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 49
    TK_PR_STATIC      shift, and go to state 50
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 77 (primeiro_param_funcao)

    tipo_variavel_primitiva            go to state 17
    tipo_variavel_usuario              go to state 18
    tipo_variavel                      go to state 51
    identificador                      go to state 20
    primeiro_param_funcao              go to state 59
    declaracao_parametro_unico_funcao  go to state 53


State 44

   63 opcional_encapsulamento: TK_PR_PRIVATE .

    $default  reduce using rule 63 (opcional_encapsulamento)


State 45

   64 opcional_encapsulamento: TK_PR_PUBLIC .

    $default  reduce using rule 64 (opcional_encapsulamento)


State 46

   65 opcional_encapsulamento: TK_PR_PROTECTED .

    $default  reduce using rule 65 (opcional_encapsulamento)


State 47

   58 declaracao_novo_tipo: TK_PR_CLASS identificador '[' declaracao_novo_tipo_propriedade . declaracao_novo_tipo_propriedades ']' ';'

    ':'  shift, and go to state 60

    $default  reduce using rule 60 (declaracao_novo_tipo_propriedades)

    declaracao_novo_tipo_propriedades  go to state 61


State 48

   61 declaracao_novo_tipo_propriedade: opcional_encapsulamento . tipo_variavel_primitiva identificador

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    tipo_variavel_primitiva  go to state 62


State 49

   81 declaracao_parametro_unico_funcao: TK_PR_CONST . TK_PR_STATIC tipo_variavel identificador
   82                                  | TK_PR_CONST . tipo_variavel identificador

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 63
    TK_IDENTIFICADOR  shift, and go to state 8

    tipo_variavel_primitiva  go to state 17
    tipo_variavel_usuario    go to state 18
    tipo_variavel            go to state 64
    identificador            go to state 20


State 50

   83 declaracao_parametro_unico_funcao: TK_PR_STATIC . tipo_variavel identificador

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 8

    tipo_variavel_primitiva  go to state 17
    tipo_variavel_usuario    go to state 18
    tipo_variavel            go to state 65
    identificador            go to state 20


State 51

   84 declaracao_parametro_unico_funcao: tipo_variavel . identificador

    TK_IDENTIFICADOR  shift, and go to state 8

    identificador  go to state 66


State 52

   76 declaracao_funcao: tipo_variavel_primitiva identificador '(' primeiro_param_funcao . ')' function_body

    ')'  shift, and go to state 67


State 53

   78 primeiro_param_funcao: declaracao_parametro_unico_funcao . param_funcao

    ','  shift, and go to state 68

    $default  reduce using rule 79 (param_funcao)

    param_funcao  go to state 69


State 54

   69 declaracao_variavel_global: identificador TK_PR_STATIC tipo_variavel ';' .

    $default  reduce using rule 69 (declaracao_variavel_global)


State 55

   66 declaracao_tamanho: '[' TK_LIT_INT ']' .

    $default  reduce using rule 66 (declaracao_tamanho)


State 56

   71 declaracao_variavel_global: identificador declaracao_tamanho TK_PR_STATIC tipo_variavel . ';'

    ';'  shift, and go to state 70


State 57

   70 declaracao_variavel_global: identificador declaracao_tamanho tipo_variavel ';' .

    $default  reduce using rule 70 (declaracao_variavel_global)


State 58

   74 declaracao_funcao_usertype_e_var_global: identificador identificador '(' primeiro_param_funcao . ')' function_body

    ')'  shift, and go to state 71


State 59

   75 declaracao_funcao: TK_PR_STATIC tipo_variavel identificador '(' primeiro_param_funcao . ')' function_body

    ')'  shift, and go to state 72


State 60

   59 declaracao_novo_tipo_propriedades: ':' . declaracao_novo_tipo_propriedade declaracao_novo_tipo_propriedades

    TK_PR_PRIVATE    shift, and go to state 44
    TK_PR_PUBLIC     shift, and go to state 45
    TK_PR_PROTECTED  shift, and go to state 46

    $default  reduce using rule 62 (opcional_encapsulamento)

    declaracao_novo_tipo_propriedade  go to state 73
    opcional_encapsulamento           go to state 48


State 61
